@@ -1,4 +1,4 @@
-/* avdevicexml.cpp
+/* bebob_avdevice_xml.cpp
  * Copyright (C) 2006 by Daniel Wagner
  *
  * This file is part of FreeBob.
